Update eclipse-mat.md